plugins {
    id 'com.android.application'
}

def globalVersionCode = 40
def globalVersionName = "willbefine"

android {
    compileSdk 33

    defaultConfig {
        applicationId "material.hunter"
        minSdk 24
        resConfigs "en"
        targetSdk 33
        versionCode globalVersionCode
        versionName globalVersionName
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField("String", "AUTHOR", "\"${System.env.USERNAME}\"")
        }
        debug {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField("String", "AUTHOR", "\"${System.env.USERNAME}\"")
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

repositories {
    google()
    mavenCentral()
}
dependencies {
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.airbnb.android:lottie:5.2.0'
    implementation 'com.google.android.material:material:1.7.0'
}